service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: spring-petclinic
  labels:
    app: spring-petclinic
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: alb
spec:
  selector:
    app: spring-petclinic
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
